------------------------------------------------------------
System Installer v2.4.12 (not yet released)
------------------------------------------------------------
    - Make some error messages more explicit.
    - Fix issues with newer version of DHCP (patch from Olivier
      Lahaye for the RHEL6 support).
    - Add the support for initramfs (path from Olivier Lahaye
      for the RHEL6 support).
    - Fix the detection of the kernel on CentOS 6.

------------------------------------------------------------
System Installer v2.4.11
------------------------------------------------------------
    - Do not try to setup DNS within the DHCP configuration on a private
      network (patch from Olivier Lahaye).
    - Improve the management of the /etc/hosts when adding new clients.
    - Improve the distro detection when creating a new image.

------------------------------------------------------------
System Installer v2.4.10 
------------------------------------------------------------
    - Clean up the code for the management of partitions within an image.
    - Fix a few issues when dealing with images' partitions.

------------------------------------------------------------
System Installer v2.4.9
------------------------------------------------------------
    - Improve the help output of the mksiimage command (patch from Olivier 
      Lahaye).
    - Continue to fix issues with CCISS controllers (patch from Olivier
      Lahaye).
    - Improve the disk partitioning capability, e.g., support of GTP 
      partitions (patch from Olivier Lahaye).

------------------------------------------------------------
System Installer v2.4.8 
------------------------------------------------------------
    - Fix a bug in the Partition/IA.pm.

------------------------------------------------------------
System Installer v2.4.7
------------------------------------------------------------
    - Remove debugging info.
    - Improve the support of CCISS controllers.